--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.59.16",
     "@tosspayments/tosspayments-sdk": "^2.3.2",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "eslint-config-next": "^14.2.13",
+    "event-source-polyfill": "^1.0.31",
     "flowbite": "^2.5.2",
     "js-cookie": "^3.0.5",
     "list": "^2.0.19",
